--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </div>
         </div>
         <script src="http://code.jquery.com/jquery-2.1.4.min.js" charset="utf-8"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.js"></script>
         <script src="public/js/chartplotter.js"></script>
     </body>
 </html>
