--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <canvas id="wav" width="100" height="100" style="border:1px solid"></canvas>
         </div>
         </div>
-        <script src="http://code.jquery.com/jquery-2.1.4.min.js" charset="utf-8"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.js"></script>
-        <script src="public/js/chartplotter.js"></script>
+        <script src="http://code.jquery.com/jquery-2.1.4.min.js" charset="utf-8" type="text/javascript"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.js" type="text/javascript"></script>
+        <script src="public/js/chartplotter.js" type="text/javascript"></script>
     </body>
 </html>
