--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script> -->
     </head>
     <body>
-        <div>
+        <div class="plots">
+            <!-- 
             <div style="width:49%; height:50%; float:left">
                 <canvas id="win" width="100" height="100" style="border:1px solid;"></canvas>
             </div>
             <div style="width:49%; height:50%; float:right">
                 <canvas id="mac" width="100" height="100" style="border:1px solid;"></canvas>
             </div>
+            -->
             <!--<div style="width:40%">
             <canvas id="fisheye" width="100" height="100" style="border:1px solid;"></canvas>
             </div>
