--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script> -->
     </head>
     <body>
-        <div class="plots">
-            <!-- 
+        <div>
+            <div>
+                <form action="/" id="userForm">
+                User:
+                <input type="text" name="user" value="perfSample">
+                <input type="submit" value="Submit">
+                </form> 
+            </div>
+            <div class="plots">
+            </div>
+            <!--
             <div style="width:49%; height:50%; float:left">
                 <canvas id="win" width="100" height="100" style="border:1px solid;"></canvas>
             </div>
