Form Submission code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     </head>
     <body>
         <div>
+            <div>
+                <form action="/" id="userForm">
+                User:
+                <input type="text" name="user" value="perfSample">
+                <input type="submit" value="Submit">
+                </form> 
+            </div>
             <div style="width:49%; height:50%; float:left">
                 <canvas id="win" width="100" height="100" style="border:1px solid;"></canvas>
             </div>
