Improvements for UI preferences (Avg, stepsize,maxvalue)

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         <div>
             <div>
                 <form action="/" id="userForm">
-                User:
-                <input type="text" name="user" value="perfSample">
+                User: <input type="text" name="user" value="perfSample">
+                Avg: <input id="avgChkBox" type="checkbox" name="avg" checked> 
+                StepSize For Grid: <input type="text" name="stepSize" value="200"> 
+                MaxValue To Plot: <input type="text" name="maxValue" value="1000">  
                 <input type="submit" value="Submit">
                 </form> 
             </div>
