--- a/index.html
+++ b/index.html
@@ -1,54 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!--<script data-main="app" src="lib/require.js"></script>-->
-        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script> -->
     </head>
     <body>
         <div>
             <div>
                 <form action="/" id="userForm">
                 User: <input type="text" name="user" value="perfSample">
-                Avg: <input id="avgChkBox" type="checkbox" name="avg" checked> 
+                Avg: <input id="avgChkBox" type="checkbox" name="avg" checked>
+                Stacked: <input id="stackedChkBox" type="checkbox" name="stacked" checked>
                 StepSize For Grid: <input type="text" name="stepSize" value="200"> 
-                MaxValue To Plot: <input type="text" name="maxValue" value="1000">  
+                MaxValue To Plot: <input type="text" name="maxValue" value="1000">
                 <input type="submit" value="Submit">
                 </form> 
             </div>
             <div class="plots">
             </div>
-            <!--
-            <div style="width:49%; height:50%; float:left">
-                <canvas id="win" width="100" height="100" style="border:1px solid;"></canvas>
+            <div class="plotsDescription">
             </div>
-            <div style="width:49%; height:50%; float:right">
-                <canvas id="mac" width="100" height="100" style="border:1px solid;"></canvas>
-            </div>
-            -->
-            <!--<div style="width:40%">
-            <canvas id="fisheye" width="100" height="100" style="border:1px solid;"></canvas>
-            </div>
-            <div style="width:40%">
-            <canvas id="editorials" width="100" height="100" style="border:1px solid"></canvas>
-            </div>
-            <div style="width:40%">
-            <canvas id="interwav" width="100" height="100" style="border:1px solid"></canvas>
-            </div>
-            <div style="width:40%">
-            <canvas id="sdpx" width="100" height="100" style="border:1px solid"></canvas>
-            </div>
-            <div style="width:40%">
-            <canvas id="stexr" width="100" height="100" style="border:1px solid"></canvas>
-            </div>
-            <div style="width:40%">
-            <canvas id="mp4vr" width="100" height="100" style="border:1px solid"></canvas>
-            </div>
-            <div style="width:40%">
-            <canvas id="mp4" width="100" height="100" style="border:1px solid"></canvas>
-            </div>
-            <div style="width:40%">
-            <canvas id="wav" width="100" height="100" style="border:1px solid"></canvas>
-            </div>-->
         </div>
         <script src="http://code.jquery.com/jquery-2.1.4.min.js" charset="utf-8" type="text/javascript"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.js" type="text/javascript"></script>
