Adding more colors

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
                 <form action="/" id="userForm">
                 User: <input type="text" name="user" value="perfSample">
                 Avg: <input id="avgChkBox" type="checkbox" name="avg" checked> 
+                Stacked: <input id="stackedChkBox" type="checkbox" name="stacked" checked>
                 StepSize For Grid: <input type="text" name="stepSize" value="200"> 
                 MaxValue To Plot: <input type="text" name="maxValue" value="1000">  
                 <input type="submit" value="Submit">
                 </form> 
             </div>
             <div class="plots">
+            </div>
+            <div class="plotsDescription">
             </div>
         </div>
         <script src="http://code.jquery.com/jquery-2.1.4.min.js" charset="utf-8" type="text/javascript"></script>
