--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
             <div>
                 <form action="/" id="userForm">
                 User: <input type="text" name="user" value="perfSample">
-                Avg: <input id="avgChkBox" type="checkbox" name="avg" checked> 
                 Stacked: <input id="stackedChkBox" type="checkbox" name="stacked" checked>
                 StepSize For Grid: <input type="text" name="stepSize" value="200"> 
-                MaxValue To Plot: <input type="text" name="maxValue" value="1000">  
+                MaxValue To Plot: <input type="text" name="maxValue" value="1000"> 
+                CanvasHeight: <input type="text" name="canvasHeight" value="350"> 
                 <input type="submit" value="Submit">
                 </form> 
             </div>
